<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="32dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/weight_input"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="120dp"
        android:digits="0123456789"
        android:hint="@string/weight_input"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="159dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_result" />

    <TextView
        android:id="@+id/height_label"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/height_label"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/show_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="159dp"
        android:text="@string/show_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_category" />

    <TextView
        android:id="@+id/bmi_text"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:text="@string/bmi_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_label" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/height_input"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="200dp"
        android:digits="0123456789"
        android:hint="@string/height_input"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weight_label"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/weight_label"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bmi_result_text"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/bmi_result_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/bmi_text"
        app:layout_constraintTop_toBottomOf="@+id/height_input" />

    <TextView
        android:id="@+id/error_text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/error_text_weight"
        android:textColor="#ff0000"
        app:layout_constraintBottom_toTopOf="@+id/weight_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/error_text_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/error_text_height"
        android:textColor="#ff0000"
        app:layout_constraintBottom_toTopOf="@+id/height_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bmi_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:gravity="center"
        android:text="@string/bmi_category"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_text" />

</androidx.constraintlayout.widget.ConstraintLayout>